--- a/60. Permutation Sequence.md
+++ b/60. Permutation Sequence.md
@@ -2,7 +2,7 @@
 
 ## Description
 
-> Link: 
+> Link: https://leetcode.com/problems/permutation-sequence/
 
 ```
 The set [1,2,3,...,n] contains a total of n! unique permutations.
@@ -39,14 +39,63 @@ Output: "2314"
 
 > Related Topics: Math, Backtracking
 
-> Related Questions:
+> Related Questions: [LC31. ](https://leetcode.com/problems/next-permutation/)[Next Permutation](https://github.com/Zingg7/LeetCode/blob/master/31.%20Next%20Permutation.md), [LC46. ](https://leetcode.com/problems/permutations/)[Permutations](https://github.com/Zingg7/LeetCode/blob/master/46.%20Permutations.md)
 
+观察题目中给出的例子，我们可以看到在n=3时，由1开头的数共有2个，由后两位互换位置得到，2与3相同。<br>
+
+我们再观察由1~4组成的全排列，当第一位为1时，有如下几种情况：<br>
+“1234”<br>
+“1243”<br>
+“1324”<br>
+“1342”<br>
+“1423”<br>
+“1432”<br>
+一共有6种情况。<br>
+
+当第一位固定时，全部情况即为剩下的三个数（2.3.4）进行全排列的所有情况，而这三位数的排列实际上也可以分为固定第二位，再对第三、四位进行排列。<br>
+对三、四位排列共有2种情况，乘上第二位的3种情况（2.3.4），即为三位数的全排列总数。<br>
+由以上情况我们可以推断出，剩下i位数所占的情况数为：i * (i-1) * ... * 1<br>
+
+解题的思路：根据题目给出的所需求的位数k以及每一位数的总情况数，依次获得第1,2,...n位数。<br>
+例如题目中给出的例子，n=4，k=9时，1,2,3,4开头每个共有6种情况，6<k<12，可确定第一位为2。<br>
+再以第一位为2为基础，查看它的所有情况，1,3,4开头每个共2中情况，2<k'<4，可确定第二位为3。<br>
+依次类推，得到最后结果。
+ 
+有一点需要留意的时，题目中给出的k，为从1开始计算，因此如果需要在循环中使用，要先将k-1，才能得到正确答案。<br>
+
+重新做的时候发现一个问题，不宜使用k作为循环判断的标志，因为当k=1的时候会陷入死循环……还是用n比较直接！！<br>
 
 ## Code
 
 ```java
-
+class Solution60 {
+    public String getPermutation(int n, int k) {
+        int[] factorial = new int[n+1];
+        factorial[0] = 1;
+        List<Integer> ori = new ArrayList<>();
+        for (int i = 1; i <= n; i++) {
+            factorial[i] = factorial[i-1] * i;
+            ori.add(i);
+        }
+        
+        StringBuilder res = new StringBuilder();
+        
+        int layer = 0;
+        k = k - 1;
+        while (n > 0) {
+            layer = k / factorial[n-1];
+            res.append(ori.get(layer));
+            ori.remove(layer);
+            k = k - (layer * factorial[n-1]);
+            n--;
+        }
+        return res.toString();
+        
+    }
+}
 ```
 
 
 ## Submission details
+Runtime: 1 ms, faster than 100.00% of Java online submissions for Permutation Sequence.<br>
+Memory Usage: 36 MB, less than 100.00% of Java online submissions for Permutation Sequence.
